Fixed navigator separator color on Firefox 51.

--- a/FirefoxEdgeLight.css
+++ b/FirefoxEdgeLight.css
@@ -105,7 +105,7 @@
   }
 
   #navigator-toolbox::after {
-    background-color: var(--navigator-separator-bg-color) !important;
+    border-bottom: 1px solid var(--navigator-separator-bg-color) !important;
   }
 
   /* TABS */
